--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
 
     <p>Changing the style of an HTML element</p>
     <button onclick="document.getElementById('dope').style.color = 'red'">Change color</button>
+<div>
+    <h2>innerText vs innerHTML Demo</h2>
 
+    <label for="userInput">Enter some text:</label>
+    <input type="text" id="userInput" placeholder="Try entering <b>bold</b> text">
+    <button onclick="useInnerText()">Use innerText</button>
+    <button onclick="useInnerHTML()">Use innerHTML</button>
+
+    <h3>Output:</h3>
+    <p id="output"></p>
+</div>
     <script>
         function resetPage() {
             // Reset text content
@@ -47,6 +57,19 @@
             // Reset text color
             document.getElementById("dope").style.color = "";
             document.getElementById("dope").style.display = "block";
+
+    // Reset user input and output
+    document.getElementById("userInput").value = "";
+    document.getElementById("output").innerText = "";
+        }
+        function useInnerText() {
+            let input = document.getElementById("userInput").value;
+            document.getElementById("output").innerText = input;  // Safe (ignores HTML)
+        }
+
+        function useInnerHTML() {
+            let input = document.getElementById("userInput").value;
+            document.getElementById("output").innerHTML = input;  // Risky (executes HTML)
         }
     </script>
 
